--- a/scss/views/_pages.scss
+++ b/scss/views/_pages.scss
@@ -6,8 +6,7 @@ nav ul li a {
     color: black;
     font-size: $font-menu;
     border-bottom: 2px solid gray;
-    transition: all 0.5s ease;
-    border-color: aquamarine;
+    border-color: gray;
     flex-wrap: wrap;
     
 }
