--- a/css/style.css
+++ b/css/style.css
@@ -31,8 +31,13 @@ p {
 }
 .encabezado {
   display: flex;
-  gap: 200px;
-  flex-wrap: wrap;
+  grid-template-columns: 20% 50%;
+  background: #f7f5f5;
+  font-weight: bold;
+  padding: 15px;
+  border-top: 2px solid #ff0080;
+  border-bottom: 2px solid #ff0080;
+  justify-content: center;
 }
 
 .lista {
@@ -54,11 +59,11 @@ p {
 }
 
 .imagen-inicio {
-  max-width: 1000px;
   margin: 1rem auto;
   justify-content: center;
   display: flex;
-  flex-wrap: wrap;
+  height: 300px;
+  width: 700px;
 }
 
 .logo {
@@ -76,8 +81,7 @@ nav ul li a {
   color: black;
   font-size: 20px;
   border-bottom: 2px solid gray;
-  transition: all 0.5s ease;
-  border-color: aquamarine;
+  border-color: gray;
   flex-wrap: wrap;
 }
 
@@ -143,13 +147,78 @@ nav ul li {
   width: 100%;
   justify-content: space-around;
   align-items: center;
+  display: inline-block;
+  text-align: center;
+  padding: 1rem;
 }
 
 .instagram, .whatsapp {
   font-size: 1.3rem;
-  background-color: palevioletred;
+  background-color: pink;
   color: black;
   padding: 1rem;
+  margin: 50px 0;
+  vertical-align: middle;
+  display: inline-block;
+}
+
+.Titulo-web {
+  -webkit-animation-name: flash;
+  animation-name: flash;
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+}
+
+@-webkit-keyframes flash {
+  0%, 50%, 100% {
+    opacity: 1;
+  }
+  25%, 75% {
+    opacity: 0;
+  }
+}
+@keyframes flash {
+  0%, 50%, 100% {
+    opacity: 1;
+  }
+  25%, 75% {
+    opacity: 0;
+  }
+}
+.parrafo-inicio {
+  -webkit-animation-name: fadeInRight;
+  animation-name: fadeInRight;
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+}
+
+@-webkit-keyframes fadeInRight {
+  0% {
+    opacity: 0;
+    -webkit-transform: translate3d(100%, 0, 0);
+    transform: translate3d(100%, 0, 0);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: none;
+    transform: none;
+  }
+}
+@keyframes fadeInRight {
+  0% {
+    opacity: 0;
+    -webkit-transform: translate3d(100%, 0, 0);
+    transform: translate3d(100%, 0, 0);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: none;
+    transform: none;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
