--- a/scss/views/_home.scss
+++ b/scss/views/_home.scss
@@ -1,7 +1,13 @@
 .encabezado {
+   
     display: flex;
-    gap: 200px;
-    flex-wrap: wrap;
+    grid-template-columns: 20% 50%;
+    background: #f7f5f5; 
+    font-weight: bold; 
+    padding: 15px; 
+    border-top:2px solid #ff0080; 
+    border-bottom:2px solid #ff0080;
+    justify-content: center;
 
  }
 
@@ -28,11 +34,12 @@
 
 .imagen-inicio { 
 
-    max-width: 1000px;
+    
     margin: 1rem auto;
     justify-content: center;
     display: flex;
-    flex-wrap: wrap;
+    height: 300px;
+    width: 700px; 
    
 }
 
@@ -44,3 +51,4 @@
     flex-wrap: wrap;
     
  }
+
