--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -3,6 +3,8 @@ h1 {
     color: black;
     font-size: 60px;
     display: flex;
+    align-content: center;
+    
 }
 
 p {
@@ -33,3 +35,6 @@ p {
     }
 }
     
+body {
+    overflow-x: hidden;
+}
