--- a/scss/views/_pages.scss
+++ b/scss/views/_pages.scss
@@ -8,7 +8,7 @@ nav ul li a {
     border-bottom: 2px solid gray;
     border-color: gray;
     flex-wrap: wrap;
-    
+
 }
 
 
@@ -26,10 +26,13 @@ nav ul li {
     grid-template-columns: 50% 50%;
     grid-template-rows: auto auto;
     border: none;
+    align-items: center;
 }
 .imagen_receta {
     width: $imagen_width;
     height: $imagen_height;
+    justify-content: center;
+    align-items: center;
 }
 
 
