--- a/css/style.css
+++ b/css/style.css
@@ -34,15 +34,21 @@ body {
   overflow-x: hidden;
 }
 
+encabezado {
+  height: auto;
+}
+
 .encabezado {
   display: flex;
   grid-template-columns: 20% 50%;
   background: #f7f5f5;
   font-weight: bold;
-  padding: 15px;
+  padding: 20px;
   border-top: 2px solid #ff0080;
   border-bottom: 2px solid #ff0080;
   justify-content: center;
+  width: 100%;
+  height: 100%;
 }
 
 .lista {
@@ -77,7 +83,7 @@ body {
   width: 150px;
   height: 150px;
   justify-content: center;
-  margin: 50px;
+  margin: 5%;
   flex-wrap: wrap;
   align-items: center;
 }
