--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -20,6 +20,7 @@ p {
     body {
         background-color: chocolate;
     } 
+   
 }
 
 @media only screen and (min-width: 501px) and (max-width: 960px) {
@@ -38,3 +39,9 @@ p {
 body {
     overflow-x: hidden;
 }
+
+encabezado {
+
+    height: auto;
+}
+
