--- a/scss/views/_home.scss
+++ b/scss/views/_home.scss
@@ -4,11 +4,12 @@
     grid-template-columns: 20% 50%;
     background: #f7f5f5; 
     font-weight: bold; 
-    padding: 15px; 
+    padding: 20px; 
     border-top:2px solid #ff0080; 
     border-bottom:2px solid #ff0080;
     justify-content: center;
-    
+    width: 100%;
+    height: 100%;
 
  }
 
@@ -51,7 +52,7 @@
     width: 150px;
     height: 150px;
     justify-content: center;
-    margin: 50px;
+    margin: 5%;
     flex-wrap: wrap;
     align-items: center;
     }
